[project]
name = "DiseaseNetPy"
version = "0.0.2"
authors = [
  { name="Can Hou", email="houcan@wchscu.cn" },
  { name="Haowen Liu", email="haowenliu81@gmail.com" },
]
description = "DiseaseNetPy"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "community==1.0.0b1",
    "lifelines==0.30.0",
    "matplotlib==3.10.0",
    "networkx==3.4.2",
    "numpy==2.2.2",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "python_louvain==0.16",
    "scikit_learn==1.6.1",
    "scipy==1.15.1",
    "statsmodels==0.14.4"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = {file="LICENSE"}

[project.urls]
Homepage = "https://github.com/HZcohort/DiseaseNet/tree/package"
Issues = "https://github.com/HZcohort/DiseaseNet/issues"

[tool.setuptools]
include-package-data =true

[tool.setuptools.package-data]
"DiseaseNetPy" = [
    "data/phecode_1.2/*.npy",
    "data/phecode_1.2/*.csv"
]